--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,9 @@
 [submodule "bundle/colorschemes"]
 	path = bundle/colorschemes
 	url = git@github.com:flazz/vim-colorschemes.git
+[submodule "bundle/vim-coffee-script"]
+    path = bundle/vim-coffee-script
+    url = git://github.com/kchmck/vim-coffee-script.git
+[submodule "bundle/zencoding-vim"]
+    path = bundle/zencoding-vim
+    url = git://github.com/mattn/zencoding-vim.git
